--- a/sites/default/sync/core.extension.yml
+++ b/sites/default/sync/core.extension.yml
@@ -1,9 +1,11 @@
 module:
+  MyBlock: 0
   admin_toolbar: 0
   admin_toolbar_tools: 0
   automated_cron: 0
   block: 0
   block_content: 0
+  block_example: 0
   breakpoint: 0
   ckeditor: 0
   color: 0
